finished problems in class

--- a/week_6-B.Rmd
+++ b/week_6-B.Rmd
@@ -46,13 +46,35 @@ tibble(urn_red = seq(100, 700, by = 100)) %>%
 
 Interpret the meaning of the graphic.
 
+```{r}
+x <- tibble(urn_red = 0:1000) %>% 
+  mutate(paddle_red = map(urn_red, ~ rbinom(n = 10000, size = 25, prob = ./1000))) %>% 
+  unnest(paddle_red)
+
+x %>%
+  ggplot(aes(x = paddle_red, y = urn_red)) +
+    geom_point(alpha = 0.2)
+```
 
 
 
 ## Scene 2
 
-**Prompt:** Using the joint distribution we calculated in Scene 5 as input, calculate your posterior probability density for the number of red beads in the urn, given that that 10 red were sampled in our paddle of 25.
+**Prompt:** Using the joint distribution we calculated in Scene 1 as input, calculate your posterior probability density for the number of red beads in the urn, given that that 10 red were sampled in our paddle of 25.
 
+```{r}
+
+post <- x %>%
+  filter(paddle_red == 10) %>%
+  group_by(urn_red) %>%
+  summarize(total = n(), .groups = "drop") %>%
+  mutate(prob = total / sum(total))
+
+post %>%
+  ggplot(aes(x = urn_red, y = prob)) +
+    geom_col()
+
+```
 
 
 
@@ -60,5 +82,15 @@ Interpret the meaning of the graphic.
 
 **Prompt:** With our posterior probability distribution, we can now forecast outcomes which we have not yet seen. For example, what is the probability of getting more than 3 reds if we sample 20 from the urn, given our posterior? (That is, we are pretending that we don't know the number of red beads in the urn.)
 
+```{r}
+
+post %>%
+  mutate(new_reds = map(urn_red, ~ rbinom(n = 10000, size = 20, prob = ./1000))) %>%
+  unnest(new_reds) %>%
+  mutate(gt_3 = new_reds > 3) %>%
+  mutate(gt3_weighted = gt_3 * prob) %>%
+  summarize(final = sum(gt3_weighted) / sum(prob))
+  
+```
 
 
